2007-05-09  Ethan Merritt  <merritt@u.washington.edu>

	* src/color.d (ifilled_quadrangle): Initialize line style before
	setting color.  Bug #1715480

	* src/misc.c (lp_use_properties): Pay attention to the point flag
	even if we fall through to a default line type. Bug #1715480

2007-05-07  Ethan Merritt  <merritt@u.washington.edu>

	* configure.in: If the user specifies ./configure --with-plot but
	gives no explicit directory then try anyway because the necessary
	library may be in a standard place.  Bug #1654681

	Given how out of date the gnugraph/unixplot driver is, and the fact
	that gnuplot itself supports more output formats that the gnugraph
	format converter, it might be more reasonable just to drop this
	driver option altogether.

	* term/aquaterm.trm (AQUA_options): Allow terminal window ID to come
	from a variable.  Bug #1714070

2007-05-06  Ethan Merritt  <merritt@u.washington.edu>

	* src/graphics.h src/graph3d.h: Rearrange the order of fields in the
	2D and 3D plot structures so that all fields they have in common are
	aligned in parallel. This facilitates consolidation of code that can
	apply to both 2D and 3D plots. It also points up several fields that
	were not in the 3D structure but should be (e.g. fillstyle).
	Impact: trivial increase in the size of the 3D plot structure.

	* term/gd.trm: Remove long-dead code and associated comment.

2007-05-05  Ethan Merritt  <merritt@u.washington.edu>

	* term/gd.trm (PNG_image): Rearrange code slightly to facilitate later
	addition of alpha channel code.

2007-05-05  Timothee Lecomte  <timothee.lecomte@ens.fr>

	* src/wxterminal/wxt_gui.cpp (wxtThread::Entry):
	Fix the initialization of a sigset_t. The structure is not meant to be
	known, functions are provided instead. The previous code was
	completely wrong on non GNU systems.

2007-05-04  Daniel Sebald  <daniel.sebald@ieee.org>

	* term/gd.trm (PNG_image): Fixed an image clipping bug in x dimension.
